--- a/AHQ/Unity/Unity.xcconfig
+++ b/AHQ/Unity/Unity.xcconfig
@@ -1,5 +1,8 @@
 #include "Exports.xcconfig"
 
+//#include "Pods/Target Support Files/Pods-AHQ/Pods-AHQ.debug.xcconfig"
+//#include "Pods/Target Support Files/Pods-AHQ/Pods-AHQ.release.xcconfig"
+
 UNITY_SCRIPTING_BACKEND = il2cpp;
 GCC_PREFIX_HEADER = $(PRODUCT_NAME)/Unity/Classes/Prefix.pch;
 
@@ -12,8 +15,8 @@ OTHER_CFLAGS = $(inherited) -DINIT_SCRIPTING_BACKEND=1 -fno-strict-overflow -DRU
 
 OTHER_LDFLAGS = $(inherited) -weak-lSystem -weak_framework CoreMotion -weak_framework GameKit -weak_framework iAd -framework AVFoundation -framework AudioToolbox -framework CFNetwork -framework CoreGraphics -framework CoreLocation -framework CoreMedia -framework CoreVideo -framework Foundation -framework MediaPlayer -framework MediaToolbox -framework Metal -framework OpenAL -framework OpenGLES -framework QuartzCore -framework SystemConfiguration -framework UIKit -liconv.2 -liPhone-lib -lil2cpp ${PODS_LIBRARIES};
 
-SWIFT_OBJC_BRIDGING_HEADER = $(PRODUCT_NAME)/Unity/Bridging-Header.h;
-SWIFT_PRECOMPILE_BRIDGING_HEADER = YES;
+//SWIFT_OBJC_BRIDGING_HEADER = $(PRODUCT_NAME)/Unity/Bridging-Header.h;
+//SWIFT_PRECOMPILE_BRIDGING_HEADER = YES;
 
 // If your Unity project contains depencencies that uses cocoapod (e.g. GVR SDK), follow steps below.
 // 1. Open Unity generated Xcode project file (remember to open workspace instead of project so the pod
